# 3D-Speaker

./: .gitignore  1.txt  README.md  requirements.txt
egs/3dspeaker/: README.md
egs/cnceleb/: README.md
egs/sv-cam++/: README.md
egs/sv-eres2net/: README.md
egs/sv-rdino/: README.md
egs/voxceleb/: README.md
pretrained/speech_ecapa-tdnn_sv_en_voxceleb_16k/: examples
pretrained/speech_ecapa-tdnn_sv_zh-cn_3dspeaker_16k/: ecapa-tdnn.ckpt  examples
pretrained/speech_ecapa-tdnn_sv_zh-cn_cnceleb_16k/: ecapa-tdnn.ckpt  examples
pretrained/speech_eres2net_base_200k_sv_zh-cn_16k-common/: examples  pretrained_eres2net.pt
pretrained/speech_eres2net_base_sv_zh-cn_3dspeaker_16k/: eres2net_base_model.ckpt  examples
pretrained/speech_rdino_ecapa_tdnn_sv_en_voxceleb_16k/: examples  pretrained_rdino.pth
pretrained/speech_rdino_ecapa_tdnn_sv_zh-cn_3dspeaker_16k/: examples
runtime/onnxruntime/: CMakeLists.txt  README.md
runtime/onnxruntime/assets/: fbank_config.json
runtime/onnxruntime/cmake/: build_json.cmake  build_onnx.cmake
runtime/onnxruntime/feature/: CMakeLists.txt  feature_basic.cpp  feature_basic.h  feature_common.cpp  feature_common.h  feature_fbank.cpp  feature_fbank.h  feature_functions.cpp  feature_functions.h
runtime/onnxruntime/model/: CMakeLists.txt  speaker_embedding_model.cpp  speaker_embedding_model.h
runtime/onnxruntime/utils/: CMakeLists.txt  wav_reader.cpp  wav_reader.h
speakerlab/dataset/: dataset.py  dataset_asd.py  dataset_rdino.py  dataset_sdpn.py
speakerlab/loss/: dino_loss.py  keleo_loss.py  margin_loss.py  sdpn_loss.py
(+235 files in other folders)
